--- a/components/index.html
+++ b/components/index.html
@@ -11,9 +11,9 @@
       type="image/x-icon"
       href="https://user-images.githubusercontent.com/9554297/83762004-a0761b00-a6a9-11ea-83b4-9c8ff721d4b8.png"
     />
-    <link rel="stylesheet" href="/qku-ui/umi.css" />
+    <link rel="stylesheet" href="/rqk-ui/umi.css" />
     <script>
-      window.routerBase = "/qku-ui";
+      window.routerBase = "/rqk-ui";
     </script>
     <script>
       //! umi version: 3.2.16
@@ -23,6 +23,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="/qku-ui/umi.js"></script>
+    <script src="/rqk-ui/umi.js"></script>
   </body>
 </html>
