feat: 完善组件文档

--- a/src/Divider/index.less
+++ b/src/Divider/index.less
@@ -3,7 +3,7 @@
   align-items: center;
   margin: 16px 0;
   padding: 0 15px;
-  color: #B4B4B4;
+  color: #b4b4b4;
   font-size: 12px;
   line-height: 24px;
   border-color: #ebedf0;
@@ -11,7 +11,8 @@
   border-width: 0;
 }
 
-.divider::before, .divider::after {
+.divider::before,
+.divider::after {
   content: '';
   display: block;
   flex: 1;
