--- a/src/Drawer/index.less
+++ b/src/Drawer/index.less
@@ -1,14 +1,46 @@
-.drawer {
-  position: relative;
-  overflow: hidden;
-  display: none;
+.drawer__wrapper {
+  .drawer {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
   .drawer-body {
     position: fixed;
     z-index: 9901;
-    width: 0;
-    height: 0;
     background-color: #fff;
-    transition: all 0.1s;
+    &--default {
+      width: auto;
+      padding: 30px 50px;
+      top: 50%;
+      left: 50%;
+      transform: translate3d(-50%, -50%, 0);
+    }
+    &--top {
+      top: 0;
+      left: 0;
+      width: 100%;
+      transform: translate(0, -100%);
+    }
+    &--bottom {
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      transform: translate(0, 100%);
+    }
+    &--left {
+      top: 0;
+      left: 0;
+      width: 30%;
+      height: 100%;
+      transform: translate(-100%, 0);
+    }
+    &--right {
+      top: 0;
+      right: 0;
+      width: 30%;
+      height: 100%;
+      transform: translate(100%, 0);
+    }
   }
   .drawer-overlay {
     position: fixed;
@@ -19,46 +51,38 @@
     z-index: 9900;
     width: 100%;
     height: 100%;
-    transition: opacity 0.5s ease-out;
     opacity: 0;
     background-color: rgba(0, 0, 0, 0.6);
   }
-  &.drawer-open {
+  .drawer.drawer-open {
     position: relative;
-    display: block;
     .drawer-overlay {
+      animation: fade-enter 100ms ease-in both;
+    }
+  }
+  .drawer-body.drawer-body-open {
+    &--default {
+      width: auto;
+      padding: 30px 50px;
+      top: 50%;
+      left: 50%;
+      transform: translate3d(-50%, -50%, 0);
+    }
+    &--top,
+    &--bottom,
+    &--left,
+    &--right {
+      animation: fade-drawer 100ms ease-in both;
+    }
+  }
+  @keyframes fade-enter {
+    100% {
       opacity: 1;
     }
-    .drawer-body {
-      &--default {
-        width: auto;
-        padding: 30px 50px;
-        top: 50%;
-        left: 50%;
-        transform: translate3d(-50%, -50%, 0);
-      }
-      &--top {
-        top: 0;
-        left: 0;
-        width: 100%;
-      }
-      &--bottom {
-        bottom: 0;
-        left: 0;
-        width: 100%;
-      }
-      &--left {
-        top: 0;
-        left: 0;
-        width: 30%;
-        height: 100%;
-      }
-      &--right {
-        top: 0;
-        right: 0;
-        width: 30%;
-        height: 100%;
-      }
+  }
+  @keyframes fade-drawer {
+    100% {
+      transform: translate(0, 0);
     }
   }
 }
