--- a/src/Drawer/index.less
+++ b/src/Drawer/index.less
@@ -8,6 +8,7 @@
     position: fixed;
     z-index: 9901;
     background-color: #fff;
+    overflow: auto;
     &--default {
       width: auto;
       padding: 30px 50px;
