--- a/src/Drawer/index.less
+++ b/src/Drawer/index.less
@@ -1,4 +1,5 @@
 .drawer__wrapper {
+  @delay: 0.3s;
   .drawer {
     position: relative;
     width: 100%;
@@ -11,6 +12,7 @@
     overflow: auto;
     &--center {
       width: auto;
+      height: auto;
       padding: 30px 50px;
       top: 50%;
       left: 50%;
@@ -20,27 +22,25 @@
       top: 0;
       left: 0;
       width: 100%;
-      transform: translate(0, -100%);
+      height: auto;
     }
     &--bottom {
       left: 0;
       bottom: 0;
       width: 100%;
-      transform: translate(0, 100%);
+      height: auto;
     }
     &--left {
       top: 0;
       left: 0;
-      width: 30%;
+      width: auto;
       height: 100%;
-      transform: translate(-100%, 0);
     }
     &--right {
       top: 0;
       right: 0;
-      width: 30%;
+      width: auto;
       height: 100%;
-      transform: translate(100%, 0);
     }
   }
   .drawer-overlay {
@@ -52,38 +52,122 @@
     z-index: 9900;
     width: 100%;
     height: 100%;
-    opacity: 0;
+    transition: all @delay;
     background-color: rgba(0, 0, 0, 0.6);
   }
-  .drawer.drawer-open {
-    position: relative;
-    .drawer-overlay {
-      animation: fade-enter 100ms ease-in both;
+
+  .drawer-fade {
+    &-appear {
+      opacity: 0;
     }
-  }
-  .drawer-body.drawer-body-open {
-    &--center {
-      width: auto;
-      padding: 30px 50px;
-      top: 50%;
-      left: 50%;
-      transform: translate3d(-50%, -50%, 0);
+
+    &-appear-active {
+      opacity: 1;
+      transition: all 0.3s;
     }
-    &--top,
-    &--bottom,
-    &--left,
-    &--right {
-      animation: fade-drawer 100ms ease-in both;
-    }
-  }
-  @keyframes fade-enter {
-    100% {
+
+    &-exit {
       opacity: 1;
     }
+
+    &-exit-active {
+      opacity: 0;
+      transition: all 0.3s;
+    }
   }
-  @keyframes fade-drawer {
-    100% {
+
+  .drawer-center {
+    &-enter,
+    &-appear {
+      opacity: 0;
+      transform: scale(0.9) translate3d(-50%, -50%, 0);
+    }
+    &-enter-active,
+    &-appear-active {
+      transition: all 0.3s;
+      opacity: 1;
+      transform: scale(1) translate3d(-50%, -50%, 0);
+    }
+    &-exit {
+      opacity: 1;
+      transform: scale(1) translate3d(-50%, -50%, 0);
+    }
+    &-exit-active {
+      transition: all 0.3s;
+      opacity: 0;
+      transform: scale(0.9) translate3d(-50%, -50%, 0);
+    }
+  }
+  .drawer-left {
+    &-enter,
+    &-appear {
+      transform: translate(-100%, 0);
+    }
+    &-enter-active,
+    &-appear-active {
+      transition: all 0.3s;
       transform: translate(0, 0);
+    }
+    &-exit {
+      transform: translate(0, 0);
+    }
+    &-exit-active {
+      transition: all 0.3s;
+      transform: translate(-100%, 0);
+    }
+  }
+  .drawer-right {
+    &-enter,
+    &-appear {
+      transform: translate(100%, 0);
+    }
+    &-enter-active,
+    &-appear-active {
+      transition: all 0.3s;
+      transform: translate(0, 0);
+    }
+    &-exit {
+      transform: translate(0, 0);
+    }
+    &-exit-active {
+      transition: all 0.3s;
+      transform: translate(100%, 0);
+    }
+  }
+  .drawer-top {
+    &-enter,
+    &-appear {
+      transform: translate(0, -100%);
+    }
+    &-enter-active,
+    &-appear-active {
+      transition: all 0.3s;
+      transform: translate(0, 0);
+    }
+    &-exit {
+      transform: translate(0, 0);
+    }
+    &-exit-active {
+      transition: all 0.3s;
+      transform: translate(0, -100%);
+    }
+  }
+  .drawer-bottom {
+    &-enter,
+    &-appear {
+      transform: translate(0, 100%);
+    }
+    &-enter-active,
+    &-appear-active {
+      transition: all 0.3s;
+      transform: translate(0, 0);
+    }
+    &-exit {
+      transform: translate(0, 0);
+    }
+    &-exit-active {
+      transition: all 0.3s;
+      transform: translate(0, 100%);
     }
   }
 }
